Fix flicker/re-animate when states change but display icons should not change state

--- a/src/css/imports/mixins.less
+++ b/src/css/imports/mixins.less
@@ -471,7 +471,7 @@
       &.jw-breakpoint-0:not(.jw-state-idle),
       &.jw-breakpoint-1:not(.jw-state-idle) {
         .jw-display-icon-container {
-          animation: jw-display-icon-container-slide-up 150ms ease-out;
+          animation: jw-display-icon-container-slide-up 150ms ease-out forwards;
         }
       }
 
